--- a/package.json
+++ b/package.json
@@ -29,18 +29,12 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.4",
-    "@types/node": "^20.6.0",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "autoprefixer": "^10.4.15",
-    "cypress": "^13.2.0",
-    "eslint": "^8.49.0",
-    "eslint-config-next": "^13.4.19",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
+    "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "eslint": "^8.49.0",
+    "eslint-config-next": "^13.4.19"
   }
 }
